@@ -1,3 +1,4 @@
+	* fixed bug in add_piece() that would trigger asserts
 	* fixed vs 2010 build
 	* recognizes more clients in identify_client()
 	* fixed bug where trackers wouldn't be retried if they failed
